--- a/static/scss/user-page.scss
+++ b/static/scss/user-page.scss
@@ -25,6 +25,9 @@
 
   .edit-profile-holder, .edit-about-me-holder {
     text-align: right;
+    position: absolute;
+    top: 15px;
+    right: 0;
   }
 
 }
